# shitools

./: Cargo.toml  LICENSE  README.md  build.rs
assets/: icon.rc  preload.lua
src/: dir_remember.rs  main.rs  mainwindow.rs  utils.rs
src/tools/: batch_process.rs  blank.rs  code_picture.rs  fake_data_gen.rs  game2048.rs  json_tool.rs  lua_tool.rs  mod.rs  randstr.rs  text_util.rs  time_tool.rs  uuid_comp.rs  vt_comp.rs
src/tools/bool_logic/: calc.rs  component.rs  mod.rs
src/tools/byte_tool/: basic.rs  hashes.rs  mod.rs  summarize.rs
src/tools/encode_tool/: basic.rs  encoding.rs  mod.rs
src/tools/polyglot_png/: mod.rs  polyglot_png_algo.rs
